@@ -1,6 +1,7 @@
 #ifndef LIBPORT_WINDOWS_HH
 # define LIBPORT_WINDOWS_HH
 
+# include <boost/cstdint.hpp>
 # include "detect_win32.h"
 
 # if defined WIN32 || defined LIBPORT_WIN32
@@ -33,19 +34,6 @@
 #  ifdef LIBPORT_DEFINED_WINSOCKAPI_
 #   undef _WINSOCKAPI_
 #   undef LIBPORT_DEFINED_WINSOCKAPI_
-#  endif
-
-// Define POSIX types if compiling with Visual C++.
-#  ifdef _MSC_VER
-// XXX: Maybe this ought to be in a new file, say, stdint.h?
-typedef UINT8 uint8_t;
-typedef INT8 int8_t;
-typedef UINT16 uint16_t;
-typedef INT16 int16_t;
-typedef UINT32 uint32_t;
-typedef INT32 int32_t;
-typedef UINT64 uint64_t;
-typedef INT64 int64_t;
 #  endif
 
 // Based on the value I have on my G4 -- Akim.
