@@ -1,3 +1,8 @@
+2007-10-23  mefyl  <mefyl@lrde.epita.fr>
+
+	Use boost portable header for integers definitions.
+	* windows.hh: Here.
+
 2007-10-23  Akim Demaille  <demaille@gostai.com>
 
 	Fwd decl PackageInfo.
